@@ -1,5 +1,7 @@
 DIST tvnamer-2.0.tar.gz 36590 RMD160 67df702f5b56bbc56085abf78d6ccf159a12acf9 SHA1 226081e085199be673e5a9cdb699a4ae299682a3 SHA256 c3493aac40f431e57945892aac01125752a9d55a6af601c4698032de8ed0621e
-EBUILD tvnamer-2.0.ebuild 1037 RMD160 2ad563c72fd57bc1f3e908970ce0e8b177ac117a SHA1 2304183e59b01c434ef61d27f6be9b2ba3acf023 SHA256 f4379417a73128cf40f65074964fae2406679357249aefb4c3990203ef0a28ca
-EBUILD tvnamer-9999.ebuild 1037 RMD160 2ad563c72fd57bc1f3e908970ce0e8b177ac117a SHA1 2304183e59b01c434ef61d27f6be9b2ba3acf023 SHA256 f4379417a73128cf40f65074964fae2406679357249aefb4c3990203ef0a28ca
-MISC ChangeLog 363 RMD160 d9949b039767422681eb68f834d202c601712c4a SHA1 0745da5ae7957957245a0fb7b3ed445bab6b7071 SHA256 4e2d0cb8d1b302d87aaa9babc5e7a7223906f5d91b39eb5fad89821fccff588e
+DIST tvnamer-2.1.tar.gz 38238 RMD160 3bf59c71a05ecafd70fa0c549dc8f6e19e044ae1 SHA1 d10c686356cafa7876b20aaa2428e8a929751f36 SHA256 5f28db5dc798fbed5cf1d01dc99ab914c02dda64ca75dc15bb8e51cee2aa03d8
+EBUILD tvnamer-2.0.ebuild 1063 RMD160 7175286ec5dc0cc25eb0127d28cc786d600193d2 SHA1 68dbf6511675915e487d4f78367f7471f230cf12 SHA256 74170dbc4f2928fd6c33fcd66b16bd74552307b047faf522f1a79908cb7397bf
+EBUILD tvnamer-2.1.ebuild 1063 RMD160 7175286ec5dc0cc25eb0127d28cc786d600193d2 SHA1 68dbf6511675915e487d4f78367f7471f230cf12 SHA256 74170dbc4f2928fd6c33fcd66b16bd74552307b047faf522f1a79908cb7397bf
+EBUILD tvnamer-9999.ebuild 1063 RMD160 7175286ec5dc0cc25eb0127d28cc786d600193d2 SHA1 68dbf6511675915e487d4f78367f7471f230cf12 SHA256 74170dbc4f2928fd6c33fcd66b16bd74552307b047faf522f1a79908cb7397bf
+MISC ChangeLog 581 RMD160 d22a0915e1e44cfb099a32bfec8a62c8f1361809 SHA1 3a712530b4ddd38205d94062af0859259ca4f8bf SHA256 48bcfb7c3ad7e86da094b27e56475358207153688c9c159500e5dc61db372b8c
 MISC metadata.xml 276 RMD160 fd181b054cd11f1435dcc39cee1fa929aced0d64 SHA1 2cd6880811d258a56c36eec9b164cd44ec3f992b SHA256 a84bc31863ba67936d6dda7dc3c6a173082a46349edd5de38be9c6e412216027
